# EDP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  RELEASE_GATE_EDP_0_1_DRAFT.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: fetch_vendors.sh
docs/: edp_spec.md  prior_art.md  protocol_limitations.md  rfp.md  rfp_response.md  status.md  threat_model.md
examples/: minimal_config.example
fpga/: trng_core.v  trng_tb.v  trng_top.v
include/: edp.h
src/: edp_crypto.c  edp_crypto.h  edp_daemon.c  edp_harvest.c  edp_harvest.h  edp_mix.c  edp_mix.h  edp_peer.c  edp_peer.h  edp_protocol.c  edp_protocol.h  edp_types.h
tests/: bench.c  test_integration.sh  test_security.c  test_unit.c
